# local-mindmap

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
docs/: acceptance-test-checklist.md  desktop-app-roadmap.md  desktop-deployment-guide.md  desktop-local-config.md  desktop-packaging-plan.md  desktop-plugin-system.md  next-task.md  plugin-development-guide.md  plugin-development.md  project-status.md  release-checklist.md  release-notes-v1.0.0.md  release-notes-v1.1.0-draft.md  release-notes-v1.1.1-draft.md  release-notes-v1.1.2-draft.md  release-notes-v1.2.0-draft.md  release-notes-v1.3.0-draft.md  release-notes-v1.3.1.md  release-notes-v1.4.0-draft.md  release-notes-v1.5.0-draft.md  release-notes-v1.6.0-draft.md  requirement-matrix.md  requirements.docx  requirements.md  share-packs.md  xinchuang-compatibility.md
docs/examples/: invalid-command-test-plugin.json  legacy-v16-export-plugin.json  menu-contribution-test-plugin.json  overwrite-test-plugin-v1.json  overwrite-test-plugin-v2.json  persistence-test-plugin.json
docs/examples/sample-batch-script-plugin/: README.md  main.js  manifest.json
docs/examples/sample-json-plugin/: README.md  manifest.json
docs/examples/sample-json-workflow-plugin/: README.md  manifest.json
docs/examples/sample-script-plugin/: README.md  main.js  manifest.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/app/components/: CanvasControls.tsx  TopMenuBar.tsx  (+2 more)
src/styles/: global.css
(+80 files in other folders)
