[package]
name = "local-mindmap"
version = "1.5.0"
description = "A local-only mindmap desktop shell"
authors = ["local-mindmap contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
